# Chainballot-Online-voting-system-with-Blockchain

./: .gitignore  Cargo.toml  chainSpecRaw.json  customSpec.json  customSpecRaw.json  manage.py  public_key.pem  requirements.txt
Backend/: .gitignore  db.sqlite3  manage.py  vercel.json
Backend/authentication/: apps.py  models.py  serializers.py  urls.py  views.py
Backend/authentication/migrations/: 0001_initial.py
Backend/chainballot/: asgi.py  settings.py  urls.py  wsgi.py
Backend/contact/: admin.py  models.py  urls.py  views.py
Backend/contact/migrations/: 0001_initial.py
Backend/student/: models.py  serializers.py  urls.py  views.py
Backend/student/migrations/: 0001_initial.py
Backend/voter/: form.py  models.py  serializers.py  urls.py  views.py
Backend/voter/migrations/: 0001_initial.py  0002_rename_voter_voter_student.py  0003_voter_is_voted_voter_password_alter_voter_student.py  0006_voterotp.py  (+2 more)
Backend/voting/: admin.py  models.py  urls.py  views.py
Blockchain/: .gitignore
Blockchain/pallets/voting-pallet/: Cargo.toml
Blockchain/pallets/voting-pallet/src/: lib.rs
Blockchain/runtime/: Cargo.toml
Chainballot/Chainballot/: asgi.py  urls.py
Frontend/blockchain-frontend/: package-lock.json  package.json
Frontend/chain_ballot_frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs
pallets/voting-pallet/: Cargo.toml
pallets/voting-pallet/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
(+33 files in other folders)
