[package]
name = "voting-pallet"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
scale-info         = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
]